Added analysis of performance metrics

--- a/4_python_analysis/redfin_analysis (S).ipynb
+++ b/4_python_analysis/redfin_analysis (S).ipynb
@@ -772,6 +772,13 @@
     "plt.legend(loc='upper left', ncol=2)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The K-Nearest Neighbors model has the best performance. It has the lowest root mean squared error and the highest r2 value."
+   ]
   }
  ],
  "metadata": {
